objects/Account_Level_Behaviour__c.object
<CustomObject>
	<fields>
		<fullName>ACCOUNT_LAST_LEAD_DATE__c</fullName>
		<label>ACCOUNT_LAST_LEAD_DATE</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>Account__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Account</label>
		<referenceTo>Account</referenceTo>
		<relationshipLabel>Account Level Behavior</relationshipLabel>
		<relationshipName>Account_Level_Behavior</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>CONTACT_COUNT__c</fullName>
		<label>CONTACT_COUNT</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>CONTACT_DEPARTMENT_COUNT__c</fullName>
		<label>CONTACT_DEPARTMENT_COUNT</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>CONTACT_TYPE_COUNT__c</fullName>
		<label>CONTACT_TYPE_COUNT</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>HAS_PRIOR_OPPTY_ACCT__c</fullName>
		<label>HAS_PRIOR_OPPTY_ACCT</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>LEAD_ACTIVITY_SUBTYPE_COUNT_ACCT__c</fullName>
		<label>LEAD_ACTIVITY_SUBTYPE_COUNT_ACCT</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>LEAD_ACTIVITY_TYPE_COUNT_ACCT__c</fullName>
		<label>LEAD_ACTIVITY_TYPE_COUNT_ACCT</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>LEAD_SOLUTION_COUNT_ACCT__c</fullName>
		<label>LEAD_SOLUTION_COUNT_ACCT</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>LEAD_SOURCE_COUNT_ACCT__c</fullName>
		<label>LEAD_SOURCE_COUNT_ACCT</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<label>Account Level Behavior</label>
	<listViews>
		<fullName>All</fullName>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<displayFormat>ALB-{0000000000}</displayFormat>
		<label>Account Level Behavior</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Account Level Behavior</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>